--- a/Areas/Admin/Views/TruongLienCaps/LcTrunghocCs.cshtml
+++ b/Areas/Admin/Views/TruongLienCaps/LcTrunghocCs.cshtml
@@ -210,7 +210,7 @@
 
                                                 <td style="white-space:nowrap; vertical-align:middle">
                                                     <a href="@Url.Action("DetailsThcs", "TruongLienCaps", new { id = item.HocSinh_ID })" title="Xem chi tiết thông tin thí sinh"><i data-feather="eye" style="vertical-align: middle !important "></i></a> |
-                                                    <a href="@Url.Action("EditThcs", "TruongLienCaps", new { id = item.HocSinh_ID })" title="Chỉnh sửa thông tin thí sinh tin thí sinh"><i data-feather="edit" style="vertical-align: middle !important "></i></a> |
+                                                    @*<a href="@Url.Action("EditThcs", "TruongLienCaps", new { id = item.HocSinh_ID })" title="Chỉnh sửa thông tin thí sinh tin thí sinh"><i data-feather="edit" style="vertical-align: middle !important "></i></a> |*@
                                                     <a href="@Url.Action("DeleteThcs", "TruongLienCaps", new { id = item.HocSinh_ID })" title="Xóa thông tin thí sinh"><i data-feather="trash-2" style="vertical-align:middle!important" disable></i></a>
                                                 </td>
                                             </tr>
