--- a/Views/DangKyXetTuyenKhac/IeltsEdit.cshtml
+++ b/Views/DangKyXetTuyenKhac/IeltsEdit.cshtml
@@ -309,6 +309,8 @@
         </div>
     </div>
 </div>
+<input type="hidden" value="@ViewBag.Dkxt_ID" id="hidden_Dkxt_ID" />
+<input type="hidden" id="dkxt_id_checkin" name="dkxt_id_checkin" />
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
@@ -670,13 +672,14 @@
             Dkxt_DonViToChuc: Dkxt_DonViToChuc,
             Dkxt_KetQuaDatDuoc: Dkxt_KetQuaDatDuoc,
             Dkxt_TongDiem: Dkxt_TongDiem,
-            Dkxt_NgayDuThi: Dkxt_NgayDuThi,          
+            Dkxt_NgayDuThi: Dkxt_NgayDuThi,
             Dkxt_ToHopXT: Dkxt_ToHopXT,
             Dkxt_MinhChung_HB: fileData[0].savePath,
             Dkxt_MinhChung_CCCD: fileData[1].savePath,
             Dkxt_MinhChung_Bang: fileData[2].savePath,
             Dkxt_MinhChung_KetQua: fileData[3].savePath,
-            Dkxt_MinhChung_UuTien: fileData[4].savePath,        }
+            Dkxt_MinhChung_UuTien: fileData[4].savePath,
+        }
 
         $.ajax({
             url: "/DangKyXetTuyenKhac/Ielts",
